--- a/App/App.csproj
+++ b/App/App.csproj
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-
         <OutputType>WinExe</OutputType>
         <UseWindowsForms>true</UseWindowsForms>
         <OutputPath>bin\</OutputPath>
@@ -21,18 +20,19 @@
         <SatelliteResourceLanguages>none</SatelliteResourceLanguages>
         <ApplicationIcon>Resources\Goupil.ico</ApplicationIcon>
         <!-- en none -->
-
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.2.0" />
-        <PackageReference Include="NAudio" Version="2.1.0" />
+        <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.14.0" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
+        <PackageReference Include="System.Drawing.Common" Version="9.0.6" />
         <PackageReference Include="SkiaSharp" Version="2.88.8" />
-        <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
     </ItemGroup>
+    
     <ItemGroup>
         <ProjectReference Include="..\Script\Script.csproj" />
     </ItemGroup>
+    
     <ItemGroup>
         <Reference Include="Ephemera.NBagOfTricks">
           <HintPath>..\lib\Ephemera.NBagOfTricks.dll</HintPath>
@@ -40,7 +40,11 @@
         <Reference Include="Ephemera.NBagOfUis">
             <HintPath>..\lib\Ephemera.NBagOfUis.dll</HintPath>
         </Reference>
+        <Reference Include="Ephemera.NScript">
+          <HintPath>..\..\Nebulator_new\lib\Ephemera.NScript.dll</HintPath>
+        </Reference>
     </ItemGroup>
+    
     <ItemGroup>
         <Compile Update="Properties\Resources.Designer.cs">
             <DesignTime>True</DesignTime>
@@ -48,12 +52,14 @@
             <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
     </ItemGroup>
+    
     <ItemGroup>
         <EmbeddedResource Update="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
             <LastGenOutput>Resources.Designer.cs</LastGenOutput>
         </EmbeddedResource>
     </ItemGroup>
+    
     <ItemGroup>
         <Folder Include="Resources\" />
     </ItemGroup>
